--- a/index.html
+++ b/index.html
@@ -12,87 +12,154 @@
  
 </head>
 <body>
+    <!--navbar-->
+    <nav class="nav-bar">
 
-  Home
-  About
-  Contact
-  Blog
-  Careers
+        <a href="#index"><img src="./assets/images/logo.svg" alt="logo"></a>
 
-  Request Invite
+        <a href="#index">Home</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+        <a href="/blog">Blog</a>
+        <a href="/careers">Careers</a>
 
+        <button>Request Invite</button>
 
+    </nav>
 
-  Next generation digital banking
+    <!--hero section-->
 
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
+    <section class="hero-section">
+        <div class="hero-section-intro">
+            <h1>
+                Next generation digital banking
+            </h1>
+            <p class="section-description">
+                Take your financial life online. Your Easybank account will be a one-stop-shop 
+                for spending, saving, budgeting, investing, and much more.
+            </p>
+            <button>
+                Request Invite
+            </button>
+        </div>
+        <div class="hero-mockups-img">
+            <img src="assets/images/image-mockups.png">
+        </div>
+    </section>
 
-  Request Invite
+    <!--value section-->
+    <section class="value-section">
+        <div class="value-section-intro">
+            <h1>
+                Why choose Easybank?
+            </h1>
+            <p class="section-description">
+                We leverage Open Banking to turn your bank account into your financial hub. Control 
+                your finances like never before.
+            </p>
+        </div>
+        <div class="values">
+            <div class="value-card">
+                <img src="./assets/images/icon-online.svg">
+                <p class="value-title">
+                    Online Banking
+                </p>
+                <p class="value-description">
+                    Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.
+                </p>
+            </div>
+            <div class="value-card">
+                <img src="./assets/images/icon-budgeting.svg">
+                <p class="value-title">
+                    Simple Budgeting
+                </p>
+                <p class="value-description">
+                    See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.
+                </p>
+            </div>
+            <div class="value-card">
+                <img src="assets/images/icon-onboarding.svg">
+                <p class="value-title">
+                    Fast Onboarding
+                </p>
+                <p class="value-description">
+                    We don’t do branches. Open your account in minutes online and start taking control of your finances right away.
+                </p>
+            </div>
+            <div class="value-card">
+                <img src="assets/images/icon-api.svg">
+                <p class="value-title">
+                    Open API
+                </p>
+                <p class="value-description">
+                    Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier..
+                </p>
+            </div>
+        </div>
+    </section>
 
+    <!--latest articles section-->
+    <section>
+        <div>
+            <h2>Latest Articles</h2>
+        </div>
+        <div class="articles-list">
+            <div class="article-card">
+                <img src="./assets/images/image-currency.jpg">
+                <p class="article-author">By Claire Robinson</p>
+                <p class="article-title">Receive money in any currency with no fees</p>
+                <p class="article-description">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+            </div>
+            <div class="article-card">
+                <img src="./assets/images/image-restaurant.jpg">
+                <p class="article-author">By Wilson Hutton</p>
+                <p class="article-title">Treat yourself without worrying about money</p>
+                <p class="article-description">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+            </div>
+            <div class="article-card">
+                <img src="./assets/images/image-plane.jpg">
+                <p class="article-author">By Wilson Hutton</p>
+                <p class="article-title">Take your Easybank card wherever you go</p>
+                <p class="article-description">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+            </div>
+            <div class="article-card">
+                <img src="./assets/images/image-confetti.jpg">
+                <p class="article-author">By Claire Robinson</p>
+                <p class="article-title">Our invite-only Beta accounts are now live!</p>
+                <p class="article-description">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+            </div>
 
+        </div>
+    </section>
 
-  Why choose Easybank?
+    <!--footer-->
+    <footer class="footer">
+        <div class="logo-social">
+            <a href="#index"><img src="./assets/images/logo.svg" alt="logo"></a>
+            <div class="socai-media-icons">
+                <a href="/"><img src="assets/images/icon-facebook.svg"></a>
+                <a href="/"><img src="assets/images/icon-youtube.svg"></a>
+                <a href="/"><img src="assets/images/icon-twitter.svg"></a>
+                <a href="/"><img src="assets/images/icon-pinterest.svg"></a>
+                <a href="/"><img src="assets/images/icon-instagram.svg"></a>
+            </div>
 
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
+        </div>
+        <div class="page-links">
+            <a href="/about">About Us</a>
+            <a href="/contact">Contact</a>
+            <a href="/blog">Blog</a>
+            <a href="/careers">Careers</a>
+            <a href="/support">Support</a>
+            <a href="/privacy-policy">Privacy Policy</a>
 
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
+        </div>
+        <div class="button-coppyright">
+            <button>Request Invite</button>
+            <p class="copy-right">
+                © Easybank. All Rights Reserved</p>
 
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
-
-  
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
-
-  
-
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
-
-  Request Invite
-
-  © Easybank. All Rights Reserved
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Chaitali Patel</a>.
-  </div>
+        </div>
+    </footer>
 </body>
 </html>
