basic CSS style

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
   <title>Easybank</title>
 
   <link rel="stylesheet" href="./assets/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
  
 </head>
 <body>
     <!--navbar-->
     <nav class="nav-bar">
 
-        <a href="#index"><img src="./assets/images/logo.svg" alt="logo"></a>
-
-        <a href="#index">Home</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
-        <a href="/blog">Blog</a>
-        <a href="/careers">Careers</a>
-
+        <h1><a href="#index"><img src="./assets/images/logo.svg" alt="logo"></a></h1>
+        <ul>
+            <li><a href="#index">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/careers">Careers</a></li>
+        </ul>
         <button>Request Invite</button>
 
     </nav>
@@ -31,9 +34,9 @@
 
     <section class="hero-section">
         <div class="hero-section-intro">
-            <h1>
+            <h2>
                 Next generation digital banking
-            </h1>
+            </h2>
             <p class="section-description">
                 Take your financial life online. Your Easybank account will be a one-stop-shop 
                 for spending, saving, budgeting, investing, and much more.
@@ -50,9 +53,9 @@
     <!--value section-->
     <section class="value-section">
         <div class="value-section-intro">
-            <h1>
+            <h3>
                 Why choose Easybank?
-            </h1>
+            </h3>
             <p class="section-description">
                 We leverage Open Banking to turn your bank account into your financial hub. Control 
                 your finances like never before.
@@ -101,7 +104,7 @@
     <!--latest articles section-->
     <section>
         <div>
-            <h2>Latest Articles</h2>
+            <h3>Latest Articles</h3>
         </div>
         <div class="articles-list">
             <div class="article-card">
@@ -146,12 +149,14 @@
 
         </div>
         <div class="page-links">
-            <a href="/about">About Us</a>
-            <a href="/contact">Contact</a>
-            <a href="/blog">Blog</a>
-            <a href="/careers">Careers</a>
-            <a href="/support">Support</a>
-            <a href="/privacy-policy">Privacy Policy</a>
+            <ul class="footer-link">
+                <li><a href="/about">About Us</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/careers">Careers</a></li>
+                <li><a href="/support">Support</a></li>
+                <li><a href="/privacy-policy">Privacy Policy</a></li>
+            </ul>
 
         </div>
         <div class="button-coppyright">
