--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Easybank</title>
 
@@ -16,122 +16,130 @@
 </head>
 <body>
     <!--navbar-->
-    <nav class="nav-bar">
-
-        <h1><a href="#index"><img src="./assets/images/logo.svg" alt="logo"></a></h1>
-        <ul>
-            <li><a href="#index">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/careers">Careers</a></li>
-        </ul>
-        <button>Request Invite</button>
-
+    <nav class="navbar">
+        <div class="container flex">
+            <h1><a href="#index"><img src="./assets/images/logo.svg" alt="logo"></a></h1>
+            <ul>
+                <li><a href="#index">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/careers">Careers</a></li>
+            </ul>
+            <button>Request Invite</button>
+        </div>
     </nav>
 
     <!--hero section-->
-
     <section class="hero-section">
-        <div class="hero-section-intro">
-            <h2>
-                Next generation digital banking
-            </h2>
-            <p class="section-description">
-                Take your financial life online. Your Easybank account will be a one-stop-shop 
-                for spending, saving, budgeting, investing, and much more.
-            </p>
-            <button>
-                Request Invite
-            </button>
-        </div>
-        <div class="hero-mockups-img">
-            <img src="assets/images/image-mockups.png">
+        <div class="container flex">
+            <div class="hero-section-intro">
+                <h2>
+                    Next generation digital banking
+                </h2>
+                <p class="section-description">
+                    Take your financial life online. Your Easybank account will be a one-stop-shop 
+                    for spending, saving, budgeting, investing, and much more.
+                </p>
+                <button>
+                    Request Invite
+                </button>
+            </div>
+            <div class="hero-mockups-img">
+                <img src="assets/images/image-mockups.png">
+            </div>
         </div>
     </section>
 
     <!--value section-->
     <section class="value-section">
-        <div class="value-section-intro">
-            <h3>
-                Why choose Easybank?
-            </h3>
-            <p class="section-description">
-                We leverage Open Banking to turn your bank account into your financial hub. Control 
-                your finances like never before.
-            </p>
-        </div>
-        <div class="values">
-            <div class="value-card">
-                <img src="./assets/images/icon-online.svg">
-                <p class="value-title">
-                    Online Banking
-                </p>
-                <p class="value-description">
-                    Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.
+        <div class="container">
+            <div class="value-section-intro">
+                <h3>
+                    Why choose Easybank?
+                </h3>
+                <p class="section-description">
+                    We leverage Open Banking to turn your bank account into your financial hub. Control 
+                    your finances like never before.
                 </p>
             </div>
-            <div class="value-card">
-                <img src="./assets/images/icon-budgeting.svg">
-                <p class="value-title">
-                    Simple Budgeting
-                </p>
-                <p class="value-description">
-                    See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.
-                </p>
-            </div>
-            <div class="value-card">
-                <img src="assets/images/icon-onboarding.svg">
-                <p class="value-title">
-                    Fast Onboarding
-                </p>
-                <p class="value-description">
-                    We don’t do branches. Open your account in minutes online and start taking control of your finances right away.
-                </p>
-            </div>
-            <div class="value-card">
-                <img src="assets/images/icon-api.svg">
-                <p class="value-title">
-                    Open API
-                </p>
-                <p class="value-description">
-                    Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier..
-                </p>
+            <div class="values">
+                <div class="flex">
+                    <div class="value-card">
+                        <img src="./assets/images/icon-online.svg">
+                        <p class="value-title">
+                            Online Banking
+                        </p>
+                        <p class="value-description">
+                            Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.
+                        </p>
+                    </div>
+                    <div class="value-card">
+                        <img src="./assets/images/icon-budgeting.svg">
+                        <p class="value-title">
+                            Simple Budgeting
+                        </p>
+                        <p class="value-description">
+                            See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.
+                        </p>
+                    </div>
+                    <div class="value-card">
+                        <img src="assets/images/icon-onboarding.svg">
+                        <p class="value-title">
+                            Fast Onboarding
+                        </p>
+                        <p class="value-description">
+                            We don’t do branches. Open your account in minutes online and start taking control of your finances right away.
+                        </p>
+                    </div>
+                    <div class="value-card">
+                        <img src="assets/images/icon-api.svg">
+                        <p class="value-title">
+                            Open API
+                        </p>
+                        <p class="value-description">
+                            Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier..
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <!--latest articles section-->
-    <section>
-        <div>
-            <h3>Latest Articles</h3>
-        </div>
-        <div class="articles-list">
-            <div class="article-card">
-                <img src="./assets/images/image-currency.jpg">
-                <p class="article-author">By Claire Robinson</p>
-                <p class="article-title">Receive money in any currency with no fees</p>
-                <p class="article-description">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+    <section class="articles-section">
+        <div class="container">
+            <div>
+                <h3>Latest Articles</h3>
             </div>
-            <div class="article-card">
-                <img src="./assets/images/image-restaurant.jpg">
-                <p class="article-author">By Wilson Hutton</p>
-                <p class="article-title">Treat yourself without worrying about money</p>
-                <p class="article-description">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+            <div class="articles-list">
+                <div class="flex">
+                    <div class="article-card">
+                        <img src="./assets/images/image-currency.jpg">
+                        <p class="article-author">By Claire Robinson</p>
+                        <p class="article-title">Receive money in any currency with no fees</p>
+                        <p class="article-description">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+                    </div>
+                    <div class="article-card">
+                        <img src="./assets/images/image-restaurant.jpg">
+                        <p class="article-author">By Wilson Hutton</p>
+                        <p class="article-title">Treat yourself without worrying about money</p>
+                        <p class="article-description">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+                    </div>
+                    <div class="article-card">
+                        <img src="./assets/images/image-plane.jpg">
+                        <p class="article-author">By Wilson Hutton</p>
+                        <p class="article-title">Take your Easybank card wherever you go</p>
+                        <p class="article-description">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+                    </div>
+                    <div class="article-card">
+                        <img src="./assets/images/image-confetti.jpg">
+                        <p class="article-author">By Claire Robinson</p>
+                        <p class="article-title">Our invite-only Beta accounts are now live!</p>
+                        <p class="article-description">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+                    </div>
+                </div>
             </div>
-            <div class="article-card">
-                <img src="./assets/images/image-plane.jpg">
-                <p class="article-author">By Wilson Hutton</p>
-                <p class="article-title">Take your Easybank card wherever you go</p>
-                <p class="article-description">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
-            </div>
-            <div class="article-card">
-                <img src="./assets/images/image-confetti.jpg">
-                <p class="article-author">By Claire Robinson</p>
-                <p class="article-title">Our invite-only Beta accounts are now live!</p>
-                <p class="article-description">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
-            </div>
-
         </div>
     </section>
 
